pkg/lang/testdata/ub/config/invalid/configurations-resource-reference.ub
configurations: { aws: { default: { region: resource.a.b.c } } }
